fix(toast.scss, toast.scss, readme.md): added z-index for toast messages, increased default timeout
Added z-index for toast messages. Increased default duration to 4s for better readiability. Added
docs for usage

--- a/src/components/toast/toast.scss
+++ b/src/components/toast/toast.scss
@@ -6,8 +6,9 @@
 
 :host(.is-open) {
   display: block;
-  animation-duration: 0.2s;
+  animation-duration: 0.5s;
   animation-name: fadeIn;
+  z-index: 999;
 }
 
 :host(.toast) {
